# swagger.yml
@@ -48,7 +48,8 @@ paths:
       description: Get account
       operationId: getAccount
       parameters:
-        - $ref: '#/components/parameters/domain'
+        - $ref: '#/components/parameters/namespace'
+        - $ref: '#/components/parameters/idby'
         - $ref: '#/components/parameters/id'
         - $ref: '#/components/parameters/account'
         - $ref: '#/components/parameters/email'
@@ -75,7 +76,7 @@ paths:
       description: Update password
       operationId: updatePassword
       parameters:
-        - $ref: '#/components/parameters/domain'
+        - $ref: '#/components/parameters/namespace'
         - $ref: '#/components/parameters/id'
         - $ref: '#/components/parameters/account'
         - $ref: '#/components/parameters/email'
@@ -113,7 +114,7 @@ paths:
       description: Delete account
       operationId: deleteAccount
       parameters:
-        - $ref: '#/components/parameters/domain'
+        - $ref: '#/components/parameters/namespace'
         - $ref: '#/components/parameters/id'
         - $ref: '#/components/parameters/account'
         - $ref: '#/components/parameters/email'
@@ -140,22 +141,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                domain:
-                  type: string
-                account:
-                  type: string
-                email:
-                  type: string
-                phoneRegion:
-                  type: string
-                phoneNumber:
-                  type: string
-                password:
-                  type: string
-              required:
-                - domain
+              $ref: '#/components/schemas/CreateSessionRequest'
         required: true
       responses:
         '200':
@@ -213,9 +199,9 @@ paths:
       description: Get account
       operationId: getAccount
       parameters:
-        - name: domain
+        - name: namespace
           in: query
-          description: domain
+          description: namespace
           required: true
           schema:
             type: string
@@ -253,26 +239,26 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
 components:
   schemas:
-    idGenerator:
+    IdGenerator:
       type: object
       description: id generator. If not provided, uuid will be used.
       properties:
         type:
           type: string
           enum:
-            - uuid
             - snowflake
+            - uuid
     CreateAccountRequest:
       type: object
       description: |
         Create account request. If id is not provided, it will be generated by idGenerator.
       properties:
-        domain:
+        namespace:
           type: string
         id:
           type: string
         idGenerator:
-          $ref: '#/components/schemas/idGenerator'
+          $ref: '#/components/schemas/IdGenerator'
         account:
           type: string
         email:
@@ -284,11 +270,11 @@ components:
         password:
           type: string
       required:
-        - domain
+        - namespace
     Account:
       type: object
       properties:
-        domain:
+        namespace:
           type: string
         id:
           type: string
@@ -307,7 +293,7 @@ components:
           type: integer
           format: int64
       required:
-        - domain
+        - namespace
         - id
     AccountList:
       type: object
@@ -333,22 +319,41 @@ components:
           description: total pages.
           type: integer
           format: int64
+    CreateSessionRequest:
+      type: object
+      properties:
+        namespace:
+          type: string
+        idby:
+          type: string
+          enum:
+            - id
+            - account
+            - email
+            - phone
+        account:
+          type: string
+        email:
+          type: string
+        phoneRegion:
+          type: string
+        phoneNumber:
+          type: string
+        password:
+          type: string
+      required:
+        - namespace
+        - password
     ErrorResponse:
       type: object
       properties:
         statusCode:
-          type: string
+          type: integer
         code:
           type: string
         message:
           type: string
-  requestBodies:
-    Pet:
-      description: Pet object that needs to be added to the store
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Account'
+    
   securitySchemes:
     petstore_auth:
       type: oauth2
@@ -362,7 +367,6 @@ components:
       type: apiKey
       name: api_key
       in: header
-  
   responses:
     UnauthorizedError:
       description: Unauthorized
@@ -389,13 +393,24 @@ components:
           schema:
             $ref: '#/components/schemas/ErrorResponse'
   parameters:
-    domain:
-      name: domain
+    namespace:
+      name: namespace
       in: query
-      description: domain
+      description: namespace
       required: true
       schema:
         type: string
+    idby:
+      name: idby
+      in: query
+      description: identify by
+      schema:
+        type: string
+        enum:
+          - id
+          - account
+          - email
+          - phone
     id:
       name: id
       in: query
